--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <h1>¿Quieres ser mi enamorada?</h1>
+        <h1>¿Quieres ser mi novia?</h1>
         <p>Solo quería decirte algo que me guardé por un tiempo. Me gustas, y cada día que te veo, me gustas un poquito más.</p>
         <div class="botones">
             <button id="si">Sí</button>
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="respuesta" id="respuesta">
-        <h2>Sabía que aceptarías <span>🥺</span><span>💛</span></h2>
+        <h2><span>😘</span>Sabía que aceptarías <span>🥺</span><span>💛</span></h2>
         <img src="flores.png" alt="flores">
     </div>
     <script src="script.js"></script>
