--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2><span>😘</span>Sabía que aceptarías <span>🥺</span><span>💛</span></h2>
         <img src="flores.png" alt="flores">
     </div>
-    <script src="script.js">
+    <script >
   const btnNo = document.getElementById("no");
   const btnSi = document.getElementById("si");
 
